# online_courses

./: .gitignore  README.md  dump.rdb  pyproject.toml
api/: serailzers.py  urls.py  views.py
courses/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_courseshedule_course.py  0003_auto_20220318_1638.py  0004_auto_20220318_1647.py
courses/templates/: base.html  course_detail.html  course_registration.html  courses_list.html  index.html  login.html  registration.html
settings/: .env  settings.py  urls.py
templates/: base.html  course_detail.html  course_registration.html  courses_list.html  my_admin.html  registration.html
tests/: test_online_courses.py
